--- a/parent-pom/pom.xml
+++ b/parent-pom/pom.xml
@@ -25,6 +25,7 @@
     <modules>
         <module>../mavenplugintest</module>
         <module>../mavenplugintest2</module>
+        <module>../DemoQuota</module>
     </modules>
     
   
