--- a/parent-pom/pom.xml
+++ b/parent-pom/pom.xml
@@ -24,8 +24,8 @@
 
     <modules>
         
-        <module>../mavenplugintest</module>
-        <module>../mavenplugintest2</module>
+      <!--  <module>../mavenplugintest</module>
+        <module>../mavenplugintest2</module> -->
         <module>../DemoQuota</module>
     </modules>
     
