--- a/DemoQuota/package.json
+++ b/DemoQuota/package.json
@@ -2,10 +2,6 @@
 	"name": "some-proxy",
 	"version": "1.0.0",
 	"dependencies": {
-		"newman": "^4.3.0",
-		"prettyjson": ">=1.1.3",
-		"jsonfile": ">=2.3.1",
-		"lodash": ">=4.15.0",
-		"bluebird": "^3.3.5"
+		"newman": "^4.3.0"		
 	}
 }
