--- a/DemoQuota/pom.xml
+++ b/DemoQuota/pom.xml
@@ -17,7 +17,15 @@
     <properties>
             <main.basedir>${project.basedir}</main.basedir>
     </properties>
+<dependencies>
+		<!-- https://mvnrepository.com/artifact/org.codehaus.mojo/exec-maven-plugin -->
+<dependency>
+    <groupId>org.codehaus.mojo</groupId>
+    <artifactId>exec-maven-plugin</artifactId>
+    <version>1.2.1</version>
+</dependency>
 
+         </dependencies>
     <build>
         <plugins>
             <plugin>
