--- a/DemoQuota/pom.xml
+++ b/DemoQuota/pom.xml
@@ -22,7 +22,7 @@
 <dependency>
     <groupId>org.codehaus.mojo</groupId>
     <artifactId>exec-maven-plugin</artifactId>
-    <version>1.2.1</version>
+    <version>1.3.2</version>
 </dependency>
 
          </dependencies>
@@ -84,7 +84,7 @@
     
         <executions>
           <!-- npm install -->
-       <!-- <execution>
+        <execution>
             <id>npm-install</id>
             <phase>test</phase>
             <goals>
@@ -96,7 +96,7 @@
                 install
               </commandlineArgs>
             </configuration>
-          </execution> -->
+          </execution> 
           
           <!-- Integration Testing-->
           <execution>
