--- a/DemoQuota/pom.xml
+++ b/DemoQuota/pom.xml
@@ -108,7 +108,7 @@
             <configuration>
               <executable>npm.cmd</executable>
               <commandlineArgs>
-               run New.postman_collection.json
+               run DemoQuota/New.postman_collection.json
               </commandlineArgs>
             </configuration>
           </execution>
