--- a/DemoQuota/pom.xml
+++ b/DemoQuota/pom.xml
@@ -108,7 +108,7 @@
             <configuration>
               <executable>npm.cmd</executable>
               <commandlineArgs>
-                run DemoQuota/New.postman_collection.json
+                run -script DemoQuota/New.postman_collection.json
               </commandlineArgs>
             </configuration>
           </execution>
