--- a/DemoQuota/pom.xml
+++ b/DemoQuota/pom.xml
@@ -106,9 +106,9 @@
               <goal>exec</goal>
             </goals>
             <configuration>
-              <executable>npm.cmd</executable>
+              <executable>node_modules/newman/bin/newman.js</executable>
               <commandlineArgs>
-                run -script DemoQuota/New.postman_collection.json
+                run DemoQuota/New.postman_collection.json -e DemoQuota/New.postman_collection.json
               </commandlineArgs>
             </configuration>
           </execution>
