--- a/DemoQuota/pom.xml
+++ b/DemoQuota/pom.xml
@@ -106,7 +106,7 @@
               <goal>exec</goal>
             </goals>
             <configuration>
-              <executable>node_modules/newman/bin/newman.js</executable>
+             <!-- <executable>node_modules/newman/bin/newman.js</executable> -->
               <commandlineArgs>
                 run DemoQuota/New.postman_collection.json -e DemoQuota/New.postman_collection.json
               </commandlineArgs>
