--- a/DemoQuota/pom.xml
+++ b/DemoQuota/pom.xml
@@ -108,7 +108,7 @@
             <configuration>
               <executable>node_modules/newman/bin/newman.js</executable>
               <commandlineArgs>
-                run --disable-unicode DemoQuota/New.postman_collection.json
+                run DemoQuota/New.postman_collection.json -e DemoQuota/New.postman_collection.json
               </commandlineArgs>
             </configuration>
           </execution>
