--- a/DemoQuota/pom.xml
+++ b/DemoQuota/pom.xml
@@ -106,9 +106,9 @@
               <goal>exec</goal>
             </goals>
             <configuration>
-              <executable>cmd</executable>
+              <executable>newman</executable>
 		    <commandlineArgs>
-			    newman run --disable-unicode DemoQuota/New.postman_collection.json
+			    run --disable-unicode DemoQuota/New.postman_collection.json
 		   </commandlineArgs>
 		
 	    </configuration>
